Name:                joss
Version:             0.0.1
Description:         Digital complimentary currency
Synopsis:            Digital complimentary currency
Category:            Network
License:             GPL
License-file:        LICENSE
Author:              Brandon Wiley
Maintainer:          brandon@ischool.utexas.edu
Build-Type:          Simple
Cabal-Version:       >=1.8

source-repository head
  type: git
  location: git@github.com:blanu/CreditCoin.git

Library
  Build-Depends:
    base >= 3 && < 5,
    Dust-crypto,
    bytestring,
    network,
    cereal,
    ghc-prim,
    HTTP,
    control-event,
    time,
    aeson,
    unordered-containers,
    text

Executable joss-pricestamper
  Main-is: CreditCoin/Joss/PriceStamper.hs
  Build-Depends:
    base >= 3 && < 5,
    Dust-crypto,
    bytestring,
    network,
    cereal,
    ghc-prim,
    HTTP,
    control-event,
    time,
    aeson,
    unordered-containers,
    text
